syntax = "proto3";

package co.topl.grpc.models;

// #ProtoByteComment
// Protobuf does not support `byte` types, so we use uint32 instead

message NetworkPrefix {
  // See #ProtoByteComment
  uint32 value = 1;
}

message TypedEvidence {
  // See #ProtoByteComment
  uint32 typePrefix = 1;
  bytes evidence = 2;
}

message BlockId {
  bytes value = 1;
}

message TransactionId {
  bytes value = 1;
}

// TODO: Does this representation need to change?
message Int128 {
  // BigInt Representation
  bytes value = 1;
}
